# get-a-grip

./: .gitignore  README.md  backlog.md  db.db  db_models.py  dependencies.py  hello.py  main.py  pyproject.toml  schema.graphql  seed_db.py  settings.py
app/: constants.py  dependencies.py  mail.py  main.py  models.py  seed_db.py  settings.py
app/routers/: graphql.py  pinches.py  users.py
app/templates/: email_confirmation.html
app/tests/: conftest.py  test_main.py
frontend/: biome.json  codegen.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: root.tsx  sessions.ts
frontend/app/components/: lineChart.tsx
frontend/app/routes/: _index.tsx  dashboard.tsx  home.login.tsx  home.register.tsx  home.tsx
frontend/gql/: gql.ts  graphql.ts
frontend/gqlQueries/: getPinches.ts
frontend/utils/: dateTimeUtils.ts
