[project]
name = "get-a-grip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.112.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.4.0",
    "pyjwt>=2.9.0",
    "sqlmodel",
    "strawberry-graphql[debug-server]>=0.239.0",
]
