[project]
name = "get-a-grip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "faker>=29.0.0",
    "fastapi-mail>=1.4.1",
    "fastapi[standard]>=0.112.2",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.9",
    "pydantic-settings>=2.4.0",
    "pyjwt>=2.9.0",
    "sqlmodel",
    "strawberry-graphql[debug-server,fastapi]>=0.239.0",
    "testcontainers>=4.8.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "requests>=2.32.3",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore=["B008"]
